--- a/Exercícios/ex022/fundo001.html
+++ b/Exercícios/ex022/fundo001.html
@@ -8,9 +8,39 @@
         body {
             background-image: url('imagens/wallpaper001.jpg');
         }
+
+        div.quadrado {
+            border: 2px solid black;
+            width: 250px;
+            height: 250px;
+            display: inline-block;
+            border-radius: 10px;
+        }
+
+        div#q1 {
+            background-color: aquamarine;
+        }
+
+        div#q2 {
+            background-image: linear-gradient(to bottom, yellow, red);
+        }
+
+        div#q3 {
+            background-image: url('imagens/pattern003.png');
+        }
     </style>
 </head>
 <body>
     <h1>Papel de parede</h1>
+
+    <div class="quadrado" id="q1">
+
+    </div>
+    <div class="quadrado" id="q2">
+
+    </div>
+    <div class="quadrado" id="q3">
+
+    </div>
 </body>
 </html>
