--- a/Exercícios/ex022/fundo005.html
+++ b/Exercícios/ex022/fundo005.html
@@ -15,6 +15,8 @@
         }
 
         .container {
+            background-image: url('imagens/target001.png');
+            background-size: 100% 100%;
             height: 50vh;
             border: 4px solid black;
             position: relative;
@@ -22,6 +24,8 @@
         }
 
         .content {
+            background-image: url('imagens/target001.png');
+            background-size: 100% 100%;
             margin: 0px;
             position: absolute;
             background-color: gray;
